--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -141,6 +141,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	monome-snd.dtbo \
 	mpu6050.dtbo \
 	mz61581.dtbo \
+	norns-buttons-encoders.dtbo \
 	ov5647.dtbo \
 	ov7251.dtbo \
 	ov9281.dtbo \
