config: Enable Powermate driver

--- a/arch/arm/configs/norns_defconfig
+++ b/arch/arm/configs/norns_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-14"
+CONFIG_LOCALVERSION="-15"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ=y
@@ -438,6 +438,7 @@ CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_EVDEV=m
 CONFIG_KEYBOARD_GPIO=m
 CONFIG_INPUT_JOYSTICK=y
+CONFIG_INPUT_POWERMATE=m
 CONFIG_JOYSTICK_IFORCE=m
 CONFIG_JOYSTICK_IFORCE_USB=y
 CONFIG_JOYSTICK_XPAD=m
