--- a/arch/arm/configs/norns_defconfig
+++ b/arch/arm/configs/norns_defconfig
@@ -664,11 +664,12 @@ CONFIG_USB_IOWARRIOR=m
 CONFIG_USB_YUREX=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_MMC_BCM2835_MMC=y
+CONFIG_MMC_BCM2835_DMA=y
 CONFIG_MMC_BCM2835_SDHOST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SPI=m
-CONFIG_MMC_BCM2835=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGER_TIMER=y
