--- a/arch/arm/configs/norns_defconfig
+++ b/arch/arm/configs/norns_defconfig
@@ -545,6 +545,7 @@ CONFIG_SND_USB_VARIAX=m
 CONFIG_SND_SOC=y
 CONFIG_SND_BCM2835_SOC_I2S=y
 CONFIG_SND_BCM2708_SOC_MONOME=y
+CONFIG_SND_BCM2708_SOC_MONOME_SHIELD=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=m
