--- a/arch/arm/boot/dts/overlays/monome-shield-overlay.dts
+++ b/arch/arm/boot/dts/overlays/monome-shield-overlay.dts
@@ -8,7 +8,7 @@
 	fragment@0 {
 		target = <&sound>;
 		__overlay__ {
-			compatible = "monome";
+			compatible = "monome-shield";
 			i2s-controller = <&i2s>;
 			status = "okay";
 		};
