monome-snd: use generic asoc driver and overlays for configuration

--- a/sound/soc/bcm/Kconfig
+++ b/sound/soc/bcm/Kconfig
@@ -311,8 +311,12 @@ config SND_BCM2708_SOC_MONOME
        tristate "Support for monome-snd"
        depends on SND_BCM2708_SOC_I2S || SND_BCM2835_SOC_I2S
        select SND_SOC_CS4270
+       select SND_SOC_CS4271
+       select SND_SOC_CS4271_I2C
+       select SND_SIMPLE_CARD
+       select SND_SIMPLE_CARD_UTILS
        help
-       Say Y or M if you want to add support for Monome soundcard
+         Say Y or M if you want to add support for Monome soundcard
 
 config SND_PISOUND
 	tristate "Support for Blokas Labs pisound"
