--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,6 +14,9 @@ on:
   # Run tests for any PRs.
   pull_request:
 
+  # Allow triggering manually
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
