--- a/arch/arm/configs/nornsv7l_defconfig
+++ b/arch/arm/configs/nornsv7l_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-18"
+CONFIG_LOCALVERSION="-18-v7l"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_GENERIC_IRQ_DEBUGFS=y
@@ -26,8 +26,9 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_EMBEDDED=y
 CONFIG_ARCH_BCM=y
 CONFIG_ARCH_BCM2835=y
+CONFIG_ARM_LPAE=y
 CONFIG_SMP=y
-CONFIG_VMSPLIT_2G=y
+CONFIG_HIGHMEM=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_ATAGS is not set
 CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
@@ -332,6 +333,11 @@ CONFIG_MAC80211_MESH=y
 CONFIG_RFKILL=m
 CONFIG_RFKILL_INPUT=y
 CONFIG_NFC=m
+CONFIG_PCI=y
+CONFIG_PCIEPORTBUS=y
+# CONFIG_PCIEASPM is not set
+CONFIG_PCI_MSI=y
+CONFIG_PCIE_BRCMSTB=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -350,6 +356,7 @@ CONFIG_NETDEVICES=y
 CONFIG_DUMMY=m
 CONFIG_IFB=m
 CONFIG_TUN=m
+CONFIG_BCMGENET=y
 CONFIG_ENC28J60=m
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
@@ -610,6 +617,8 @@ CONFIG_USB_HIDDEV=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_MON=m
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_DWCOTG=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_REALTEK=m
@@ -675,6 +684,7 @@ CONFIG_MMC_BCM2835_DMA=y
 CONFIG_MMC_BCM2835_SDHOST=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
+CONFIG_MMC_SDHCI_IPROC=y
 CONFIG_MMC_SPI=m
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
