--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-rpi3:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,9 +29,27 @@ jobs:
 
       - name: Build
         run: |
-          ./build-kernel.sh
+          ./build-kernel.sh norns
 
       - uses: actions/upload-artifact@v2
         with:
-          name: kernel-image
+          name: kernel-image-rpi3
+          path: build/kernel-*
+
+  build-rpi4:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Authenticate
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build
+        run: |
+          ./build-kernel.sh nornsv7l
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: kernel-image-rpi4
           path: build/kernel-*
